--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "server": "nodemon server.js"
+    "start": "nodemon server.js"
+
   },
   "dependencies": {
     "cors": "^2.8.5",
