--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "nodemon server.js"
-
+    "start": "nodemon server.js",
+    "build": "npm run build"
   },
   "dependencies": {
     "cors": "^2.8.5",
